make group edit work